--- a/app/src/main/res/layout/fragment_f2.xml
+++ b/app/src/main/res/layout/fragment_f2.xml
@@ -21,6 +21,17 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="往右滑動"
+        android:textSize="24dp"
+        android:textColor="@android:color/black"
+        android:layout_marginBottom="32dp"
+        android:layout_marginStart="32dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="往左滑動"
         android:textSize="24dp"
         android:textColor="@android:color/black"
